--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,12 @@ UTILITY
 
 .alignright {
   float: right;
-  padding: 0 0 10px 10px; 
+  padding: 0 0 10px 10px;
 }
 
 .alignleft {
   float: left;
-  padding: 0 10px 10px 0; 
+  padding: 0 10px 10px 0;
 }
 
 /*============================
@@ -101,15 +101,22 @@ h2 {
 }
 
 .navbar {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(200, 200, 200, 0.2);
 }
 
 #menu-body .navbar {
-  background-color: rgba(0, 0, 0, 0.1);
-}
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  width: 100%;
 
+}
 .navbar-brand, .navbar a {
   color: white;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+  color: #d9d9d9;
+  background-color: transparent;
 }
 
 .navbar-toggle .icon-bar {
@@ -143,8 +150,6 @@ h2 {
 
 }
 
-
-
 .footer-wrapper {
   width: 100%;
   height: 250px;
@@ -162,6 +167,7 @@ h2 {
 
 #menu-items {
   position: relative;
+  padding-top: 10%;
 }
 
 
@@ -244,7 +250,7 @@ MEDIA QUERIES
   }
   .main-hero {
     height: 306px;
-  }  
+  }
   .navbar ul a {
   color: #666666;
   }
@@ -253,4 +259,3 @@ MEDIA QUERIES
     background-color: white;
   }
 }
-
