--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 
 #menu-body h1 {
@@ -129,15 +129,20 @@ h2 {
 
 
 .section-content {
-  width: 50%;
+  width: 60%;
   margin: 0 auto;
   overflow: auto;
+}
 
+.home-body {
+  background-color: #ff4b1a;
 }
 
 .main-section1 {
   padding: 50px 0;
-  background-color: rgba(255,255,255,0.5);
+  border-top: 4px solid #ff4b1a;
+  background-color: white;
+  font-size: 1.2em;
 }
 
 .main-section2 {
@@ -146,14 +151,17 @@ h2 {
   background-repeat: no-repeat;
   background-attachment: fixed;
   width: 100%;
-  height: 400px;
+  height: 300px;
+}
 
+.main-section1 h2 {
+  color: #ff4b1a;
 }
 
 .footer-wrapper {
   width: 100%;
   height: 250px;
-
+  background-color: #ff4b1a;
 }
 
 #menu-body {
